--- a/estate_agent_website/src/pages/propertiesPage/filterPage.css
+++ b/estate_agent_website/src/pages/propertiesPage/filterPage.css
@@ -1,5 +1,26 @@
 .filterPage {
     padding: 20px;
+    overflow-y: auto; /* Enables vertical scrolling */
+    max-height: 100vh; /* Limit the height to viewport height */
+  }
+  
+  /* Styling the scrollbar */
+  .filterPage::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+  }
+  
+  .filterPage::-webkit-scrollbar-thumb {
+    background-color: #888; /* Thumb color */
+    border-radius: 4px;
+  }
+  
+  .filterPage::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Thumb hover color */
+  }
+  
+  .filterPage::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Track color */
+    border-radius: 4px;
   }
   
   .propertiesList {
