update about and contact pages

--- a/Estate agent web application/Estate-Agent-Client-side-Web-Application-main/src/components/PropertyList.css
+++ b/Estate agent web application/Estate-Agent-Client-side-Web-Application-main/src/components/PropertyList.css
@@ -65,12 +65,12 @@
   }
   
   .view-details {
-    background-color: #3498db;
+    background-color: #120d61;
     color: white;
   }
   
   .favorite-button {
-    background-color: #2ecc71;
+    background-color: #09503b;
     color: white;
     border: none;
     cursor: pointer;
