--- a/Estate agent web application/Estate-Agent-Client-side-Web-Application-main/src/App.css
+++ b/Estate agent web application/Estate-Agent-Client-side-Web-Application-main/src/App.css
@@ -52,7 +52,7 @@ body {
 }
 
 .app-footer {
-  background-color: #2c3e50;
+  background-color: #0d3125;
   color: white;
   text-align: center;
   padding: 1rem;
